--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
-    "express": "^5.1.0"
+    "@supabase/supabase-js": "^2.49.8",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "pg": "^8.16.0"
   }
 }
