--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2"
+    "@types/react-dom": "^19.1.2",
+    "source-map-loader": "^5.0.0"
   }
 }
