--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
     "@supabase/supabase-js": "^2.49.8",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "pg": "^8.16.0"
+    "pg": "^8.16.0",
+    "uuid": "^11.1.0"
   }
 }
